--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
 		"fideloper/proxy": "^4.1",
 		"laravel/framework": "5.5.*",
 		"laravel/tinker": "^1.0",
-		"laravelcollective/html": "5.5.*",
-      "ext-pthreads": "*"
+		"laravelcollective/html": "5.5.*"
     },
 	"require-dev" : {
 		"filp/whoops" : "^2.0",
