--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
 		"fideloper/proxy": "^4.1",
 		"laravel/framework": "5.5.*",
 		"laravel/tinker": "^1.0",
-		"laravelcollective/html": "5.5.*"
-    },
+		"laravelcollective/html": "5.5.*",
+		"predis/predis": "^1.1"
+	},
 	"require-dev" : {
 		"filp/whoops" : "^2.0",
 		"fzaninotto/faker" : "^1.4",
