--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "bootstrap-sass": "^3.4.1",
     "laravel-echo": "^1.8.0",
+    "moment": "^2.26.0",
     "socket.io-client": "^2.3.0"
   }
 }
